--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,11 @@
 # Macro for all file types that should be treated as ZIP archives.
-[attr]zip filter=zip
+[attr]zip text filter=zip
 
 # Macro for all binary files that should use Git LFS.
 [attr]bin -text filter=lfs diff=lfs merge=lfs lockable
+
+# Forces `LF` as line endings for text based files inside ZIP archives.
+*.content/** text=auto eol=lf
 
 # OpenDocument
 *.[oO][dD][tT] zip
