chore(gitattributes): add binary glTF and MORe

--- a/.gitattributes
+++ b/.gitattributes
@@ -37,3 +37,9 @@
 # 3D models
 *.[vV][rR][mM] bin
 *.[fF][bB][xX] bin
+*.[gG][lL][bB] bin
+
+# MORe
+*.[mM][oO][rR][eE] zip
+*.[mM][aA][tT] bin
+*.[hH]5 bin
